# FlibustaTelegramBot

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt
flibusta/: flib.py
