[project]
name = "flibustatelegrambot"
version = "1.0.0"
description = ""
authors = [
    {name = "Ilya",email = "mihailovily@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "humanize (>=4.12.2,<5.0.0)",
    "pyquery (>=2.0.1,<3.0.0)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
